# dockerize

./: Dockerfile  pyproject.toml
.github/workflows/: learn-github-actions.yml
dockerize/: main.py
