[tool.poetry]
name = "dockerize"
version = "0.1.0"
description = ""
authors = ["JJHYE0N <jjhyeon0511@postech.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
